--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>
 			FELIDAE
 		</title>
+		<link rel="stylesheet" type="text/css" href="sample.css" />
 	</head>
 	<body>
 		<h1>FAMILY FELIDAE</h1>
