--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
 <p>The first cats emerged during the Oligocene about 25 million years ago, with the appearance of Proailurus and Pseudaelurus. The latter species complex was ancestral to two main lines of felids: the cats in the extant subfamilies and a group of extinct cats of the subfamily Machairodontinae, which include the saber-toothed cats such as the Smilodon. The "false sabre-toothed cats", the Barbourofelidae and Nimravidae, are not true cats, but are closely related. Together with the Felidae, Viverridae, hyaenas and mongooses, they constitute the Feliformia.</p>
  
- 
+ <p>The colour, length and density of their fur is very diverse. Fur colour covers the gamut from white to black, and fur pattern from distinctive small spots, stripes to small blotches and rosettes. Most cat species are born with a spotted fur, except the jaguarundi (Herpailurus yagouaroundi), Asian golden cat (Catopuma temminckii) and caracal (Caracal caracal). The spotted fur of lion (Panthera leo) and cougar (Puma concolor) cubs change to a uniform fur during their ontogeny. Those living in cold environments have thick fur with long hair, like the snow leopard (Panthera uncia) and the Pallas's cat (Otocolobus manul). Those living in tropical and hot climate zones have short fur. Several species exhibit melanism with all-black individuals.</p>
  
 	</body>
 </html>
