--- a/lion3.html
+++ b/lion3.html
@@ -4,12 +4,12 @@
 		<title>Lion</title>
 	</head>
 	<body style="width:80%">
-		<h1 style="color:red"> LION</h1> <hr />
-		<img src="lion photo.jpg" width=200 />
+		<h1 style="color:#e6ac00"> LION</h1> <hr />
+		<img src="lion photo.jpg" width=200 style="float:left" />
 		<p style="text-align:justify ;font: normal normal lighter 20px hevletica ">The lion <em>(Panthera leo)</em> is a species in the family Felidae and a member of the genus Panthera.
 It is most recognisable for its muscular, deep-chested body, short, rounded head, round ears, 
 and a hairy tuft at the end of its tail. It is sexually dimorphic; adult male lions have a prominent mane.
-With a typical head-to-body length of 184–208 cm (72–82 in) they are larger than females at 160–184 cm (63–72 in).
+With a typical head-to-body length of about 208 cm they are larger than females at about 184 cm.
 It is a social species, forming groups called prides. A lion pride consists of a few adult males, related females and cubs.
 Groups of female lions usually hunt together, preying mostly on large ungulates. The lion is an apex and keystone predator, 
 although some lions scavenge when opportunities occur, and have been known to hunt humans, although the species typically does not.
