--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>FAMILY FELIDAE</h1> <hr />
-		<img src="cats.jpg" width=350 border=4 />
+		<img src="feli.jpg" width=570 />
 		<p>Felidae is a family of mammals in the order <a href="carnivora1.html" >Carnivora<a>, colloquially referred to as cats, and constitutes a clade. A member of this family is also called a felid. The term "cat" refers both to felids in general and specifically to the domestic cat <em>(Felis catus)</em>.</p>
  
 <p>Felidae species exhibit the most diverse fur pattern of all terrestrial carnivores. Cats have retractile claws, slender muscular bodies and strong flexible forelimbs. Their teeth and facial muscles allow for a powerful bite. They are all obligate carnivores, and most are solitary predators ambushing or stalking their prey. Wild cats occur in Africa, Europe, Asia and the Americas. Some wild cat species are adapted to forest habitats, some to arid environments, and a few also to wetlands and mountainous terrain. Their activity patterns range from nocturnal and crepuscular to diurnal, depending on their preferred prey species.</p>
