--- a/lion3.html
+++ b/lion3.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Lion</title>
 	</head>
-	<body style="width:80%">
+	<body style="width:80%" margin:auto >
 		<h1 style="color:#e6ac00"> LION</h1> <hr />
 		<img src="lion photo.jpg" width=200 style="float:left" />
 		<p style="text-align:justify ;font: normal normal lighter 20px hevletica ">The lion <em>(Panthera leo)</em> is a species in the family Felidae and a member of the genus Panthera.
