--- a/lion3.html
+++ b/lion3.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Lion</title>
 	</head>
-	<body style="width:80%" margin:auto >
+	<body>
 		<h1 style="color:#e6ac00"> LION</h1> <hr />
-		<img src="lion photo.jpg" width=200 style="float:left" />
-		<p style="text-align:justify ;font: normal normal lighter 20px hevletica ">The lion <em>(Panthera leo)</em> is a species in the family Felidae and a member of the genus Panthera.
+		<img src="lion photo.jpg" width=200 />
+		<p>The lion <em>(Panthera leo)</em> is a species in the family Felidae and a member of the genus Panthera.
 It is most recognisable for its muscular, deep-chested body, short, rounded head, round ears, 
 and a hairy tuft at the end of its tail. It is sexually dimorphic; adult male lions have a prominent mane.
 With a typical head-to-body length of about 208 cm they are larger than females at about 184 cm.
