--- a/lion3.html
+++ b/lion3.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Lion</title>
+		
+		<link rel="stylesheet" type="text/css" href="sample.css" />
 	</head>
 	<body>
 		<h1 style="color:#e6ac00"> LION</h1> <hr />
