--- a/lion3.html
+++ b/lion3.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1 style="color:#e6ac00"> LION</h1> <hr />
-		<img src="lion photo.jpg" width=200 height=400 />
+		<img src="lion photo.jpg"  height=300 />
 		<p>The lion <em>(Panthera leo)</em> is a species in the family Felidae and a member of the genus Panthera.
 It is most recognisable for its muscular, deep-chested body, short, rounded head, round ears, 
 and a hairy tuft at the end of its tail. It is sexually dimorphic; adult male lions have a prominent mane.
