--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
  
  <p>The colour, length and density of their fur is very diverse. Fur colour covers the gamut from white to black, and fur pattern from distinctive small spots, stripes to small blotches and rosettes. Most cat species are born with a spotted fur, except the jaguarundi <em>(Herpailurus yagouaroundi)</em>, Asian golden cat <em>(Catopuma temminckii)</em> and caracal <em>(Caracal caracal)</em>. The spotted fur of <a href="lion3.html" >lion </a> <em>(Panthera leo)</em> and cougar <em>(Puma concolor)</em> cubs change to a uniform fur during their ontogeny. Those living in cold environments have thick fur with long hair, like the snow leopard <em>(Panthera uncia)</em> and the Pallas's cat <em>(Otocolobus manul)</em>. Those living in tropical and hot climate zones have short fur. Several species exhibit melanism with all-black individuals.</p>
 <select>
-              <a href="table.html" > <option>Felids</option> </a>
-              <a href="cheetah.html" > <option>Cheetah</option> </a>
-              <a href="lion3.html" > <option>Lion</option> </a>
-              <a href="carnivora1.html" > <option>Carnivora</option> </a>
-	      <a href="lists.html" > <option>Types of Felids</option> </a>
+              <option action="table.html">Felids</option> 
+              <option action="cheetah2.html">Cheetah</option> 
+              <option action="lion3.html">Lion</option> 
+              <option action="carnivora1.html">Carnivora</option> 
+	      <option action="lists.html">Types of Felids</option> 
          </select> <br /> <br />			
  
 	</body>
