--- a/cheetah2.html
+++ b/cheetah2.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>CHEETAH</title>
 	</head>
-	<body style="width:80%">
+	<body style="width:80%;margin:auto">
 		<h1 style="color:red">CHEETAH</h1> <hr />
 		<img src="cheetah.jpg" width=400 />
-		<p style="text-align:justify;font:normal normal lighter 20px hevletica">The cheetah <em>(Acinonyx jubatus)</em> is a large cat native to Africa and central Iran. It is the fastest land animal, capable of running at 80 to 128 km/h (50 to 80 mph), and as such has several adaptations for speed, including a light build, long thin legs and a long tail. Cheetahs typically reach 67–94 cm (26–37 in) at the shoulder, and the head-and-body length is between 1.1 and 1.5 m (3.6 and 4.9 ft). Adults typically weigh between 20 and 65 kg (44 and 143 lb). Its head is small, rounded, and has a short snout and black tear-like facial streaks. The coat is typically tawny to creamy white or pale buff and is mostly covered with evenly spaced, solid black spots. Four subspecies are recognised.</p>
+		<p style="text-align:justify;font:normal normal lighter 20px hevletica">The cheetah <em>(Acinonyx jubatus)</em> is a large cat native to Africa and central Iran. It is the fastest land animal, capable of running at 80 to 128 km/h (50 to 80 mph), and as such has several adaptations for speed, including a light build, long thin legs and a long tail. Cheetahs typically reach 67 to 94 cm (26 to 37 in) at the shoulder, and the head-and-body length is between 1.1 and 1.5 m (3.6 and 4.9 ft). Adults typically weigh between 20 and 65 kg (44 and 143 lb). Its head is small, rounded, and has a short snout and black tear-like facial streaks. The coat is typically tawny to creamy white or pale buff and is mostly covered with evenly spaced, solid black spots. Four subspecies are recognised.</p>
 		<p style="text-align:justify;font:normal normal lighter 20px hevletica">In 1975, five subspecies were considered valid taxa: A. j. hecki, A. j. jubatus, A. j. raineyi, A. j. soemmeringii and A. j. venaticus. In 2011, a phylogeographic study found minimal genetic variation between A. j. jubatus and A. j. raineyi; only four subspecies were identified.In 2017, the Cat Classification Task Force of the IUCN Cat Specialist Group revised felid taxonomy and recognised these four subspecies as valid. </p>
 	</body>
 </html>
