--- a/list3.html
+++ b/list3.html
@@ -6,7 +6,7 @@
 	<body>
 		<p style="text-align:justify;font-weight:bold;font-size:30px">
 		<h1>DIFFERENT TYPES OF FELIDS</h1>
-		<h3>CATS </h3> 
+		CATS : <br /> 
 		<ul style="list-style-type:square;font-size:20px">
 			<li>Persian cat </li>
 			<li>British shorthair </li>
@@ -14,7 +14,7 @@
 			<li>Siamese cat </li>
 			<li>Sphynx cat </li>
 		
-		<h3>LIONS </h3> 
+		LIONS : <br /> 
 		<ul style= "list-style-type:square" >
 			<li> Asiatic lion </li>
 			<li> Barbary lion  </li>
@@ -22,7 +22,7 @@
 			<li> Transvaal lion </li>
 			<li> Cape lion </li>
 		
-		<h3>TIGERS</h3>
+		TIGERS : <br />
 		<ul style="list-style-type:square">
 			<li> Bengal tiger </li>
 			<li> Siberian tiger </li>
@@ -30,7 +30,7 @@
 			<li> Caspian tiger </li>
 			<li> Malayan tiger </li>
 	
-		<h3>CHEETAHS</h3> 
+		CHEETAHs : <br />
 		<ul style="list-style-type:square">
 			<li> Asiatic cheetah </li>
 			<li> South African cheetah </li>
