--- a/list3.html
+++ b/list3.html
@@ -6,37 +6,41 @@
 	<body>
 		<p style="text-align:justify;font-weight:bold;font-size:30px">
 		<h1>DIFFERENT TYPES OF FELIDS</h1>
-		CATS : <br /> 
-		<ul style="list-style-type:square;font-size:20px">
+		<h2>CATS </h2>
+		<ul style="list-style-type:square">
 			<li>Persian cat </li>
 			<li>British shorthair </li>
 			<li>Maine Coon </li>
 			<li>Siamese cat </li>
 			<li>Sphynx cat </li>
+		</ul>	
 		
-		LIONS : <br /> 
+		<h2>LIONS </h2> 
 		<ul style= "list-style-type:square" >
 			<li> Asiatic lion </li>
 			<li> Barbary lion  </li>
 			<li> Congo lion </li>
 			<li> Transvaal lion </li>
 			<li> Cape lion </li>
+		</ul>	
 		
-		TIGERS : <br />
+		<h2>TIGERS </h2>
 		<ul style="list-style-type:square">
 			<li> Bengal tiger </li>
 			<li> Siberian tiger </li>
 			<li> Sumatran tiger </li>
 			<li> Caspian tiger </li>
 			<li> Malayan tiger </li>
+		</ul>	
 	
-		CHEETAHs : <br />
+		<h2> CHEETAHS </h2>
 		<ul style="list-style-type:square">
 			<li> Asiatic cheetah </li>
 			<li> South African cheetah </li>
 			<li> Northwest African cheetah </li>
 			<li> Northeast African cheetah </li>
 			<li> East African cheetah </li>
+		</ul>	
 		</p>
 		
 	</body>
