--- a/list3.html
+++ b/list3.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Lists of felids </title>	
 	</head>
-	<body>
+	<body style="width:50%;margin:auto">
 		<p style="text-align:justify;font-weight:bold;font-size:30px">
 		<h1>DIFFERENT TYPES OF FELIDS</h1>
 		<h2>CATS </h2>
