--- a/carnivora1.html
+++ b/carnivora1.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1 style="color:blue">CARNIVORA</h1> <hr />
-		<img src="cat.jpg" width=400 style="float:left" >
+		<img src="carni.jpg" width=400 style="float:left" >
 		<p>Carnivora is an order of placental mammals that have specialized in primarily eating flesh. Its members are formally referred to as carnivorans, though some species are omnivorous, such as raccoons and bears, and quite a few species such as pandas are specialized herbivores. The word 'carnivore' is derived from Latin caro (stem carn-) "flesh" and vorare "to devour", it refers to any meat-eating organism. The order Carnivora is the fifth largest order of mammals and one of the more successful members of the group; it comprises at least 279 species living on every major landmass and in a variety of habitats, ranging the cold polar regions to the hyper-arid region of the Sahara Desert to the open seas. They come in a huge array of different body plans in contrasting shapes and sizes. The smallest carnivoran is the least weasel (Mustela nivalis) with a body length of about 11 cm (4.3 in) and a weight of about 25 g (0.88 oz). The largest is the southern elephant seal (Mirounga leonina), with adult males weighing up to 5,000 kg (11,000 lb) and measuring up to 6.7 m (22 ft). All species of carnivorans are descended from a group of mammals which were related to today's pangolins, having appeared in North America 6 million years after the Cretaceous to Paleogene extinction event.</p>
 	</body>
 </html>
