--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <p>Felidae species exhibit the most diverse fur pattern of all terrestrial carnivores. Cats have retractile claws, slender muscular bodies and strong flexible forelimbs. Their teeth and facial muscles allow for a powerful bite. They are all obligate carnivores, and most are solitary predators ambushing or stalking their prey. Wild cats occur in Africa, Europe, Asia and the Americas. Some wild cat species are adapted to forest habitats, some to arid environments, and a few also to wetlands and mountainous terrain. Their activity patterns range from nocturnal and crepuscular to diurnal, depending on their preferred prey species.</p>
  
  
- <p>The colour, length and density of their fur is very diverse. Fur colour covers the gamut from white to black, and fur pattern from distinctive small spots, stripes to small blotches and rosettes. Most cat species are born with a spotted fur, except the jaguarundi <em>(Herpailurus yagouaroundi)</em>, Asian golden cat <em>(Catopuma temminckii)</em> and caracal <em>(Caracal caracal)</em>. The spotted fur of <a href="lion3.html" >lion </a> <em>(Panthera leo)</em> and cougar <em>(Puma concolor)</em> cubs change to a uniform fur during their ontogeny. Those living in cold environments have thick fur with long hair, like the snow leopard <em>(Panthera uncia)</em> and the Pallas's cat <em>(Otocolobus manul)</em>. Those living in tropical and hot climate zones have short fur. Several species exhibit melanism with all-black individuals.</p>
- <h2>Search for</h2> <br />
-			<ul style="list-style-type:circle" >
-		        <li> <a href="table.html"> Felids </a> </li>
-			<li> <a href="cheetah2.html"> Cheetah </a> </li>
-			<li> <a href="carnivora1.html"> Carnivora </a> </li>
-			<li> <a href="lion3.html"> Lion </a> </li>
-			<li> <a href="list3.html"> Types of Felids </a> </li>
-			<li> <a href="asian.html"> Asian Golden Cat </a> </li>
-		</ul>
+ <p>The colour, length and density of their fur is very diverse. Fur colour covers the gamut from white to black, and fur pattern from distinctive small spots, stripes to small blotches and rosettes. Most cat species are born with a spotted fur, except the jaguarundi <em>(Herpailurus yagouaroundi)</em>, Asian golden cat <em>(Catopuma temminckii)</em> and caracal <em>(Caracal caracal)</em>. The spotted fur of <a href="lion3.html" >lion </a> <em>(Panthera leo)</em> and cougar <em>(Puma concolor)</em> cubs change to a uniform fur during their ontogeny. Those living in cold environments have thick fur with long hair, like the snow leopard <em>(Panthera uncia)</em> and the Pallas's cat <em>(Otocolobus manul)</em>. Those living in tropical and hot climate zones have short fur. Several species exhibit melanism with all-black individuals.</p> <br />
+ <h2>Search for :</h2> <br />
+	        <select>
+		        <option> <a href="table.html"> Felids </a> </option>
+			<option> <a href="cheetah2.html"> Cheetah </a> </option>
+			<option> <a href="carnivora1.html"> Carnivora </a> </option>
+			<option> <a href="lion3.html"> Lion </a> </option>
+			<option> <a href="list3.html"> Types of Felids </a> </option>
+			<option> <a href="asian.html"> Asian Golden Cat </a> </option>
+		</select>
 	</body>
 </html>
