--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 			<li> <a href="cheetah2.html"> Cheetah </a> </li>
 			<li> <a href="carnivora1.html"> Carnivora </a> </li>
 			<li> <a href="lion3.html"> Lion </a> </li>
-			<li> <a href="list.html"> Types of Felids </a> </li>
-			<li> <a href="asian.html"> Asian Golden Cat </a> </li>
+			<li> <a href="list3.html"> Types of Felids </a> </li>
 		</ul>
 <h3>About Us :</h3>
 			<a href="fill.html"> Click Here </a> for more details
