--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h2>FELIDS</h2>
-		<table border="1" cellpadding="5" cellspacing="10" bgcolor="#1affd1" width="80%" >
+		<table border="1" cellpadding="5" cellspacing="10" width="80%" >
 			<tr>
 				<th>Sl.No</th>
 				<th>Felids </th>
