--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li> <a href="lion3.html"> Lion </a> </li>
 			<li> <a href="list3.html"> Types of Felids </a> </li>
 		</ul>
-<h3>About Us :</h3>
+<h3>Contact Us :</h3>
 			<a href="fill.html"> Click Here </a> for more details
 	</body>
 </html>
